fixed some styling on login and register pages, having issues with api cookies not showing up

--- a/diary/src/style.scss
+++ b/diary/src/style.scss
@@ -22,6 +22,7 @@ $lightPink: #EABEC3;
             align-items: center;
             justify-content: center;
             height: 100vh;
+            width: 200vh;
             background-color: $lightPink;
 
             h1{
